# chess

./: .gitmodules  .nvim.lua  CMakeLists.txt
chess/: CMakeLists.txt  chessboard.cpp  chessboard.h  chesspiece.cpp  chesspiece.h  networkinstance.cpp  networkinstance.h
chess/include/chess/: chesspiece.h  networkinstance.h
chess/src/: chessboard.cpp  chesspiece.cpp  networkinstance.cpp
ext/: CMakeLists.txt
networking/: CMakeLists.txt  connection.cpp  connection.h  message.h  queue.h
networking/include/chess/networking/: client_interface.h  connection.h  message.h  message_observer.h  queue.h  server_interface.h
networking/src/: connection.cpp  message.cpp  queue.cpp
networking/test/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt
terminal_client/: CMakeLists.txt  chesspiecerenderer.h
terminal_client/include/chess/terminal_client/: chesspiecerenderer.h
